adjust api messages
